 * Updated Korean localization.
 * Updated Polish localization.
 * Updated Spanish localization.
 * Updated TROUBLESHOOTING file.
 * Added file_type field to mantis_bug_file_table and mantis_project_file_table.
 * Added LDAP login support.
 * Added ability to limit reporters to see only their bugs.  Security will need to be tightened later.

11.04.2001  -   0.15.12

 * Added Swedish localization
 * Added print bugs feature
 * Fixed error where MD5 wasn't actually being used.
 * Fixed problem with the same password being generated over and over.
 * Fixed problem with the same cookie being generated over and over.

10.28.2001  -   0.15.11

 * Modified advanced report's "assign to" drop down to sort alphabetically
 * Modified bug_update script to send emails and behave better
 * Modified file upload size down to 60 to help out page layout in Netscape
 * Modified view_all_bug_page refresh to include f_offset
 * Fixed the post-report forms to redirect properly even if a proxy clears the HTTP_REFERER
 * Added g_use_iis global to workaround an IIS bug with header/Location calls

10.28.2001  -   0.15.10

 * Fixed problem with not being able to uncheck "hide closed" bugs filter checkbox
 * Fixed error with warnings on sending email
 * Fixed problem with being kicked out when editing bugnote

10.27.2001  -   0.15.9

 * Fixed problem with warning on view filters.

10.26.2001  -   0.15.8

 * Fixed problem with $g_manage_cookie not being unset on logout
 * Fixed error in db_upgrade.sql ( nul; should be null; )
 * Fixed serveral localization errors
 * Fixed email to only send to devlopers and higher for a given project
 * Fixed potential security hole with uploaded file permissions
 * Added ALT fields to IMG tags
 * Added edit bugnote capability
 * Added Polish localization
 * Added Russian localization
 * Added umask call to prevent uploaded files from being executed remotely.
 * Added Plain Text authentication
 * Added MD5 authentication